--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,13 @@
   "name": "nextjs",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+"scripts": {
+  "dev": "cross-env NODE_ENV=development next dev",
+  "build": "cross-env NODE_ENV=development next build",
+  "start": "cross-env NODE_ENV=development next start",
+  "lint": "next lint"
+},
+
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@next/swc-wasm-nodejs": "13.5.1",
@@ -70,5 +71,8 @@
     "vaul": "^0.9.9",
     "zod": "^4.0.17",
     "zustand": "^5.0.7"
+  },
+  "devDependencies": {
+    "cross-env": "^10.0.0"
   }
 }
